# nexus

./: .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  HANDOFF.md  OVERHAUL.md  OVERHAUL_COMPLETE.md  README.md  ROADMAP.md  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  stryker.config.mjs  tsconfig.json  vitest.config.ts
docs/: BACKEND.md  (+8 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: constants.rs  error.rs  lib.rs  state.rs
src-tauri/src/commands/: ai.rs  app_settings.rs  archive.rs  beacon.rs  boost.rs  bottleneck.rs  chrono.rs  cleanup.rs  core_parking.rs  diagnose.rs  frame_time.rs  hardware.rs  health_check.rs  launcher.rs  launcher_settings.rs  link.rs  log.rs  memory.rs  mod.rs  netopt.rs  ops.rs  profile.rs  pulse.rs  recon.rs  script.rs  security.rs  session.rs  signal.rs  status.rs  storage.rs  timer.rs  v4_history.rs  v4_optimize.rs  v4_settings.rs  vault.rs  watchdog.rs  windows_settings.rs  winopt.rs  winopt_net.rs  winopt_win.rs
src-tauri/src/commands/ai/: commands.rs  mod.rs  parser.rs  types.rs
src-tauri/src/commands/hardware/: commands.rs  mod.rs  types.rs
src-tauri/src/commands/netopt/: adapter_dns.rs  mod.rs  tcp_tuning.rs  types.rs
src-tauri/src/commands/windows_settings/: advisor.rs  commands.rs  helpers.rs  mod.rs  types.rs
src-tauri/src/commands/winopt/: backup.rs  mod.rs  net_settings.rs  win_settings.rs
src-tauri/src/emitters/: hardware_emitter.rs  mod.rs  ops_emitter.rs  pulse_emitter.rs  unified_emitter.rs
src-tauri/src/emitters/unified_emitter/: emitter_loop.rs  hardware_collector.rs  mod.rs  thermal.rs
src-tauri/src/infra/: command_runner.rs  cpu_affinity.rs  etw.rs  gpu.rs  mod.rs  netsh.rs  perplexity_client.rs  ping.rs  power_plan.rs  powershell.rs  process_control.rs  registry.rs  timer_resolution.rs
src-tauri/src/infra/power_plan/: controller.rs  controller_tests.rs  helpers.rs  mod.rs
src-tauri/src/infra/process_control/: controller.rs  mod.rs  operations.rs
src-tauri/src/parsers/: ipconfig.rs  log_parser.rs  mod.rs  vdf.rs
src-tauri/src/services/: boost.rs  bottleneck.rs  cleanup.rs  core_parking.rs  cpu_topology.rs  credentials.rs  diagnose_service.rs  frame_time.rs  game_monitor.rs  hardware.rs  health_check.rs  log_service.rs  memory_cleaner.rs  mod.rs  network_monitor.rs  network_tuning.rs  power_estimator.rs  process.rs  profile.rs  session_store.rs  settings_advisor.rs  status_service.rs  storage.rs  system_monitor.rs  thermal_monitor.rs  timer.rs  watchdog.rs
src-tauri/src/services/boost/: apply.rs  levels.rs  mod.rs  revert.rs  utils.rs
src-tauri/src/services/cleanup/: app_data.rs  mod.rs  revert.rs  temp_delete.rs  temp_files.rs  temp_scan.rs  types.rs
src-tauri/src/services/cpu_topology/: detection.rs  mod.rs  windows.rs
src-tauri/src/services/health_check/: checks.rs  mod.rs  types.rs
src-tauri/src/services/memory_cleaner/: cleaner.rs  mod.rs  types.rs
src-tauri/src/services/network_monitor/: measurement.rs  mod.rs
src-tauri/src/services/network_tuning/: helpers.rs  mod.rs  operations.rs  types.rs
src-tauri/src/types/: game.rs  mod.rs  v4.rs
(+658 files in other folders)
