[package]
name = "nexus"
version = "0.1.0"
description = "NEXUS — Personal Base of Operations"
authors = ["you"]
edition = "2021"

[lib]
name = "nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
sysinfo = "0.32"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
winreg = "0.55"
