[package]
name = "nexus"
version = "1.0.0"
description = "NEXUS — Personal Base of Operations"
authors = ["rsn1224"]
edition = "2024"

[lib]
name = "nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
tokio-util = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
sysinfo = "0.32"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
keyring = "3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
encoding_rs = "0.8.35"
dirs = "5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_SystemInformation",
] }
ferrisetw = "1.2"
nvml-wrapper = "0.10"
winreg = "0.55"

[dev-dependencies]
tempfile = "3"
